fixed the menu items shifting by moving the subheader into the header div

--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,10 @@ body {
 #navigation {
     list-style: none;
 }
+#navigation li {
+    position: relative;
+    right: -10px;
+}
 #subheader {
     text-align: center;
 }
